# ophys_nway_matching

./: Dockerfile  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.circleci/: config.yml
bamboo-specs/: bamboo.yaml
nway/: __init__.py  diagnostics.py  image_processing_utils.py  nway_matching.py  nway_matching_main.py  pairwise_matching.py  plot_overlaps.py  region_properties.py  schemas.py  transforms.py  utils.py
src/nway/: diagnostics.py  meta_registration.py  nway_matching.py  pairwise_matching.py  schemas.py  transforms.py  types.py  utils.py
src/nway/assembly_utils/: assembly.py
src/nway/onprem_utils/: README.md  assembly.py  query_utils.py
test/: test_diagnostics.py  test_image_processing_utils.py  test_legacy.py  test_nway.py  test_pairwise.py  test_test.py  test_transforms.py  test_utils.py  xtest_legacy.py
test/test_files/specimen_722884882/ophys_session_789746168/ophys_experiment_790146945/processed/ophys_cell_segmentation_run_790612585/: maxInt_masks.tif
test/test_files/specimen_722884882/ophys_session_792354406/ophys_experiment_792812544/processed/ophys_cell_segmentation_run_792864089/: maxInt_masks.tif
test/test_files/test0/: matching_result.txt  new_output.json  output.json  table_before_pruning.json
tests/: test_diagnostics.py  test_meta_registration.py  test_nway.py  test_transforms.py  test_utils.py
tests/assembly_utils/: test_query_utils.py
tests/onprem_utils/: test_query_utils.py
tmp_example/: output.json
(+4 files in other folders)
