[metadata]
name = ophys_nway_matching
version = 0.6.0
description = "cell/ROI matching across multiple optical physiology experiments"
authors = [
    "Daniel Kapner",
    "Nicholas Mei",
    "Fuhui Long (original version)"]
author_email='danielk@alleninstitute.org'
url = "https://github.com/AllenInstitute/ophys_nway_matching"

[options]
package_dir=
    =src
packages=find:
install_requires =
    argschema
    numpy
    pillow
    scikit-image
    matplotlib
    opencv-python<5.0
    pandas
    pytest
    pytest-cov
    jinja2
    pypdf2

[options.extras_require]
ONPREM = pg8000

[options.packages.find]
where=src
